--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
               <a class="dropdown-item" href="#" id="DevicesLog">Devices Log</a>
               <a class="dropdown-item" href="#">Another action</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/download/M49.exe">Inventory Manager for Windows 7/8/10</a>
+              <a class="dropdown-item" href="/download/M49Client.exe">Inventory Manager for Windows 7/8/10</a>
               <a class="dropdown-item" href="/download/M49.vbs">Inventory Manager background launch script (shell:startup)</a>
             </div>
             
