--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -22,6 +22,7 @@
         <td scope="col">Manufacturer</td>
         <td scope="col">Model</td>
         <td scope="col">Location</td>
+        <td scope="col">Uptime</td>
 
         
     </thead>
@@ -54,6 +55,8 @@
                 <td scope="row"><%=d.Serial_Number%></td>
                 <td scope="row"><%=d.Manufacturer%></td>
                 <td scope="row"><%=d.Model%></td>
+                <td scope="row"><%=d.Location%></td>
+                <td scope="row"><%=d.Uptime%></td>
 
             </tr>
             
