--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -17,12 +17,40 @@
         <td scope="col">Name</td>
         <td scope="col">User</td>
         <td scope="col">IP</td>
+        <td scope="coll">XStoreVersion</td>
+        <td scope="coll">XEnvVersion</td>
+        <td scope="col">Uptime</td>
+        <td scope="coll">CountryId</td>
+        <td scope="coll">CurrencyId</td>
+        <td scope="coll">RegionId</td>
+        <td scope="coll">StoreNumber</td>
+        <td scope="coll">StoreName</td>
         <td scope="col">System</td>
         <td scope="col">Serial_Number</td>
         <td scope="col">Manufacturer</td>
         <td scope="col">Model</td>
         <td scope="col">Location</td>
-        <td scope="col">Uptime</td>
+        <td scope="coll">numFiles</td>
+        <td scope="coll">Administrators</td>
+        <td scope="coll">DbHome</td>
+        <td scope="coll">Listener</td>
+        <td scope="coll">TnsNames</td>
+        <td scope="coll">PdfTask</td>
+        <td scope="coll">RebootTask</td>
+        <td scope="coll">InstallEnv</td>
+        <td scope="coll">TerminalId</td>
+        <td scope="coll">IsPosLead</td>
+        <td scope="coll">IsXServices</td>
+        <td scope="coll">EnvDbUrl</td>
+        <td scope="coll">EnvDbHost</td>
+        <td scope="coll">XstoreConnectionUrl</td>
+        <td scope="coll">XstoreConnectionHost</td>
+        <td scope="coll">IsMonitored</td>
+        <td scope="coll">IsSccmClient</td>
+        <td scope="coll">ChassisType</td>
+        <td scope="coll">ExpirationDays</td>
+        <td scope="coll">InstallxRegistryEnv</td>
+        <td scope="coll">PosPollDisabled</td>            
 
         
     </thead>
@@ -51,12 +79,40 @@
                 </td>
                 <td scope="row"><%=d.User %></td>
                 <td scope="row"><%=d.IP %></td>
+                <td scope="row"><%=d.XStoreVersion%></td>
+                <td scope="row"><%=d.XEnvVersion%></td>                
+                <td scope="row"><%=d.Uptime%></td>
+                <td scope="row"><%=d.CountryId%></td>
+                <td scope="row"><%=d.CurrencyId%></td>
+                <td scope="row"><%=d.RegionId%></td>
+                <td scope="row"><%=d.StoreNumber%></td>
+                <td scope="row"><%=d.StoreName%></td>
                 <td scope="row"><%=d.System %></td>
                 <td scope="row"><%=d.Serial_Number%></td>
                 <td scope="row"><%=d.Manufacturer%></td>
                 <td scope="row"><%=d.Model%></td>
                 <td scope="row"><%=d.Location%></td>
-                <td scope="row"><%=d.Uptime%></td>
+                <td scope="row"><%=d.numFiles%></td>
+                <td scope="row"><%=d.Administrators%></td>
+                <td scope="row"><%=d.DbHome%></td>
+                <td scope="row"><%=d.Listener%></td>
+                <td scope="row"><%=d.TnsNames%></td>
+                <td scope="row"><%=d.PdfTask%></td>
+                <td scope="row"><%=d.RebootTask%></td>
+                <td scope="row"><%=d.InstallEnv%></td>
+                <td scope="row"><%=d.TerminalId%></td>
+                <td scope="row"><%=d.IsPosLead%></td>
+                <td scope="row"><%=d.IsXServices%></td>
+                <td scope="row"><%=d.EnvDbUrl%></td>
+                <td scope="row"><%=d.EnvDbHost%></td>
+                <td scope="row"><%=d.XstoreConnectionUrl%></td>
+                <td scope="row"><%=d.XstoreConnectionHost%></td>
+                <td scope="row"><%=d.IsMonitored%></td>
+                <td scope="row"><%=d.IsSccmClient%></td>
+                <td scope="row"><%=d.ChassisType%></td>
+                <td scope="row"><%=d.ExpirationDays%></td>
+                <td scope="row"><%=d.InstallxRegistryEnv%></td>
+                <td scope="row"><%=d.PosPollDisabled%></td>
 
             </tr>
             
