--- a/views/syslog.ejs
+++ b/views/syslog.ejs
@@ -28,8 +28,7 @@
         <% docs.forEach(function(d){ %> <!-- ciclo for tipo d in docs -->
             <tr  scope="row" >
                 <script>
-                    var data = "<%=d.date%>".replace("GMT+0000 (Coordinated Universal Time)","");
-                    document.getElementById("<%=d.id%>D").innerHTML = data
+                    FormattaData("<%=d.id%>D","<%=d.date%>");
                 </script>
                 
                 
