--- a/views/syslog.ejs
+++ b/views/syslog.ejs
@@ -16,7 +16,7 @@
 <table  class="table table-sm">
     <thead>
         
-        <td scope="col">Status</td>
+        <td scope="col">S</td>
         <td scope="col">date</td>
         <td scope="col">host</td>
         <td scope="col">message</td>
@@ -28,8 +28,7 @@
         <% docs.forEach(function(d){ %> <!-- ciclo for tipo d in docs -->
             <tr  scope="row" >
                 <script>
-                    var data = "<%=d.date%>".replace("GMT+0000 (Coordinated Universal Time)","");
-                    document.getElementById("<%=d.id%>D").innerHTML = data
+                    FormattaData("<%=d.id%>D","<%=d.date%>");
                 </script>
                 
                 
